{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 38,
  "lineage": "e1edb4bf-ab14-a07d-b5e1-a3c1472b50da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d8796a2b0f8d29c",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-091ad4fc65fb0b805",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091ad4fc65fb0b805",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "eng99",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-062cee1ee42b6cfdc",
            "private_dns": "ip-10-0-1-97.eu-west-1.compute.internal",
            "private_ip": "10.0.1.97",
            "public_ip": "52.209.9.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aa06bdc79cc755be",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-02f8e72dde885e912"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00944f3fe6886f7b5",
            "tags": {
              "Name": "eng99_attaik_terraform_app"
            },
            "tags_all": {
              "Name": "eng99_attaik_terraform_app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02f8e72dde885e912"
            ]
          },
          "dependencies": [
            "aws_security_group.app_security_group",
            "aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-0439272de359946d0",
            "id": "igw-0439272de359946d0",
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng99_attaik_terraform_IG"
            },
            "tags_all": {
              "Name": "eng99_attaik_terraform_IG"
            },
            "vpc_id": "vpc-07b1ffffb94a2b257"
          },
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:route-table/rtb-0ad785dfd45f1ed53",
            "id": "rtb-0ad785dfd45f1ed53",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0439272de359946d0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eng99_attaik_terraform_RT"
            },
            "tags_all": {
              "Name": "eng99_attaik_terraform_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b1ffffb94a2b257"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_IG",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_association_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05747ed0d3a5e8ace",
            "route_table_id": "rtb-0ad785dfd45f1ed53",
            "subnet_id": "subnet-00944f3fe6886f7b5"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_IG",
            "aws_route_table.terraform_RT",
            "aws_subnet.app_subnet",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-02f8e72dde885e912",
            "description": "app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f8e72dde885e912",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eng99_attaik_terraform_app",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eng99_attaik_terraform_public_sg"
            },
            "tags_all": {
              "Name": "eng99_attaik_terraform_public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b1ffffb94a2b257"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-00944f3fe6886f7b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00944f3fe6886f7b5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng99_attaik_terraform_public_sn"
            },
            "tags_all": {
              "Name": "eng99_attaik_terraform_public_sn"
            },
            "vpc_id": "vpc-07b1ffffb94a2b257"
          },
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-07b1ffffb94a2b257",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01d28be5856648492",
            "default_route_table_id": "rtb-001c1b74f7c7775ae",
            "default_security_group_id": "sg-047625394644d4500",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07b1ffffb94a2b257",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-001c1b74f7c7775ae",
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng99_attaik_terraform_vpc"
            },
            "tags_all": {
              "Name": "eng99_attaik_terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}